syntax = "proto3";

import "global.proto";
import "message/system_dto.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 基础服务
service SystemService {
    /** 检测是否包含敏感词 */
    rpc CheckSensitive(String)returns(Bool);
    /** 替换敏感词 */
    rpc ReplaceSensitive(ReplaceSensitiveRequest)returns(String);
    // 获取系统信息
    rpc GetSystemInfo(Empty)returns(SSystemInfo);
    // 清除缓存
    rpc FlushCache(Empty)returns(Result);
    // 获取选项名称
    rpc GetOptionNames (GetNamesRequest) returns (IntStringMapResponse);
    // 获取下级选项,code
    rpc GetChildOptions (OptionsRequest) returns (OptionsResponse);
    // 保存通用选项
    rpc SaveGeneralOption(SGeneralOption)returns(TxResult);
    // 删除通用选项
    rpc DeleteGeneralOption(Int64)returns(TxResult);
    // 提交系统日志
    rpc SubmitSystemLog(SubmitSystemLogRequest)returns(TxResult);
    // 删除系统日志
    rpc DeleteSystemLog(DeleteSystemLogRequest)returns(TxResult);
    // 获取银行列表
    rpc QueryBanks (QueryBanksRequest) returns (OptionsResponse);
    /** 获取短信API凭据, provider 短信服务商, 默认:http */
    rpc GetSmsSetting (GetSmsSettingRequest) returns (SSmsProviderSetting);
    /** 保存短信API凭据,@provider 短信服务商, 默认:http */
    rpc SaveSmsSetting (SSmsProviderSetting) returns (Result);
    /** 清除缓存 */
    rpc CleanCache(CleanCacheRequest) returns (CleanCacheResponse);
    /** 保存面板HOOK数据,这通常是在第三方应用中初始化或调用,参见文档：BoardHooks */
    rpc SaveBoardHook (BoardHookSaveRequest) returns (Result);

    // 格式化资源地址并返回
    rpc ResourceUrl (String) returns (String);
    // 设置键值
    //rpc SetValue (Pair) returns (Result){}
    // 删除值,key
    //rpc DeleteValue (String) returns (Result){}
    // 根据前缀获取值,prefix
    //rpc GetValuesByPrefix (String) returns (StringMap){}
    // 注册单点登录应用,返回值：
    //   -  1. 成功，并返回token
    //   - -1. 接口地址不正确
    //   - -2. 已经注册
    rpc RegisterApp (SSsoApp) returns (String);
    // 获取应用信息,name
    rpc GetApp (String) returns (SSsoApp);
    // 获取单点登录应用
    rpc GetAllSsoApp (Empty) returns (StringListResponse);
    // 保存超级用户账号和密码
    rpc updateSuperCredential (SuperPassswordRequest) returns (TxResult);
    // 创建同步登录的地址,returnUrl
    rpc GetSyncLoginUrl (String) returns (String);


    // 获取地区名称,如:获取多个城市对应的名称
    rpc GetDistrictNames (GetNamesRequest) returns (IntStringMapResponse);
    // 获取省市区字符串
    rpc GetAreaString (AreaStringRequest) returns (String);
    // 获取下级区域,code
    rpc GetChildDistrict (DistrictChildrenRequest) returns (AreaListResponse);
    // 查找城市信息
    rpc FindCity(FindAreaRequest) returns (SArea);
    // 获取站点信息
    rpc GetStation(GetStationRequest) returns (SStation);

    // 获取移动应用设置
    rpc GetMoAppConf (Empty) returns (SMobileAppConfig);
    // 保存移动应用设置
    rpc SaveMoAppConf (SMobileAppConfig) returns (Result);
    // 获取微信接口配置
    rpc GetWxApiConfig (Empty) returns (SWxApiConfig);
    // 保存微信接口配置
    rpc SaveWxApiConfig (SWxApiConfig) returns (Result);
    // 获取支付平台
    rpc GetPayPlatform (Empty) returns (PaymentPlatformResponse);
    // 获取全局商户销售设置
    rpc GetGlobMchSaleConf_ (Empty) returns (SGlobMchSaleConf);
    // 保存全局商户销售设置
    rpc SaveGlobMchSaleConf_ (SGlobMchSaleConf) returns (Result);
}

// 系统信息
message SSystemInfo{
    // 配置最后更新时间
    uint64 lastUpdateTime = 1;
}

/** 替换敏感词请求 */
message ReplaceSensitiveRequest {
    /** 文本 */
    string text = 1;
    /** 替换文本 */
    string replacement = 2;
    /** 增强替换用户敏感信息,如手机,身份证,邮箱等 */
    bool extra = 3;
}

// 获取下级选项请求
message OptionsRequest{
    // 上级ID
    uint64 parentId = 1;
    // 类型名称,当上级ID为0时,筛选根节点数据
    string typeName = 2;
}

// 选项响应
message OptionsResponse {
    // 选项
    repeated SOption value = 1;
}

// 选项 
message SOption {
    // 编号
    int64 id = 1;
    // 名称
    string name = 2;
    // 值
    string value = 3;
    // 是否为叶子节点
    bool isLeaf = 4;
}

// 获取地区名称请求
message FindAreaRequest{
    // 名称
    string name = 1;
    // 编号
    int64 code = 2;
}

// 查询地区
message SArea{
    // 编码
    int64 code = 1;
    // 名称
    string name = 2;
    // 站点编号
    int64 stationId = 3;
}

// 通用选项
message SGeneralOption{
    // 编号
    int64 id = 1;
	// 类型
	string type = 2;
    // 标签
    string label = 3;
    // 值
    string value = 4;
	// 上级编号
	int64 pid = 5;
    // 排列序号
    int32 sortNum = 6;
    // 是否启用
    int32 enabled = 7;
    // 创建时间
    int64 createTime = 8;
}

// 获取下级区域请求
message DistrictChildrenRequest{
    // 上级ID
    int64 parentId = 1;
}

// 查询银行请求
message QueryBanksRequest{
    // 银行名称
    string name = 1;
    // 数量
    int32 size = 2;
}

// 获取站点请求
message GetStationRequest{
    // 城市代码
    int64 stationId = 1;
}

// 地区子站
message SStation{
    // 编号
    int64 id = 1;
    // 城市代码
    int64 cityCode = 2;
    // 城市名称
    string cityName = 3;
    // 状态: 0: 待开通  1: 已开通  2: 已关闭
    int32 status = 4;
    // 首字母
    string letter = 5;
    // 是否热门
    bool isHot = 6;
    // 创建时间
    int64 createTime = 7;
}

// 提交系统日志请求
message SubmitSystemLogRequest{
	// 用户编号
	int64 userId = 2;
	// 用户名
	string username =3;
	// 日志级别, 1:信息  2: 警告  3: 错误 4: 其他
	int32 level  = 4;
	// 日志详情
	string message = 5;
	// 参数
	string arguments = 6;
	// 终端名称
	string terminalName = 7;
	// 终端入口
	string terminalEntry = 8;
	// 终端设备型号
	string terminalModel = 9;
	// 终端应用版本
	string terminalVersion = 10;
	// 额外信息
	map<string,string> extraInfo = 11;
}

// 删除系统日志请求
message DeleteSystemLogRequest{
    // 编号
    repeated int64 id = 1;
}